# llm_module

./: .env.dev  .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/routers/: nutrition_router.py  predict_router.py
app/services/: multimodal_mock.py  nutrition_llm.py
sample/: avocado.txt  jjigae.txt  sam.txt  samlink.txt
