[project]
name = "llmserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.122.0",
    "ibm-watsonx-ai>=1.4.7",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "ultralytics>=8.3.232",
    "uvicorn>=0.38.0",
]
